# margraphita

benchmark/: CMakeLists.txt  bc_parallel.cpp  bfs_parallel.cpp  cc_parallel.cpp  cc_parallel_ec.cpp  iteration_vc.cpp  pagerank_ec.cpp  pagerank_vc.cpp  sssp_parallel.cpp  tc_iter.cpp
benchmark/microbenchmarks/: CMakeLists.txt  contention_test.cpp  join_test.cpp
src/: adj_list.cpp  adj_list.h  common_defs.h  common_util.h  edgekey.h  graph.cpp  graph.h  graph_engine.h
test/: Makefile  test_packing.cpp
